# frappe-tabkit

./: README.md  license.txt  pyproject.toml
tabkit/: api.py  hooks.py  modules.txt
