[project]
name = "tabkit"
authors = [
    { name = "Saleh Amin", email = "sa.salehamin@gmail.com" },
]
description = "Roll out Frappe form-tab layouts as code - idempotent, reversible, migrate-safe."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "license.txt" }
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0"
